--- a/csv-import/package.json
+++ b/csv-import/package.json
@@ -20,10 +20,15 @@
 		"rdf-canonize": "^1.1.0",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
+		"react-router-dom": "^5.2.0",
 		"source-map-loader": "^1.1.0",
 		"ts-loader": "^8.0.3",
 		"typescript": "^4.0.2",
 		"webpack": "^4.44.1",
 		"webpack-cli": "^3.3.12"
+	},
+	"devDependencies": {
+		"@types/query-string": "^6.3.0",
+		"@types/react-router-dom": "^5.1.5"
 	}
 }
