--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,13 +1,13 @@
 {
 
   "manifest_version": 2,
-  "name": "Borderify",
+  "name": "R1",
   "version": "1.0",
 
-  "description": "Adds a red border to all webpages matching mozilla.org.",
+  "description": "Allows you to use the R1 extension on dataverse",
 
   "icons": {
-    "48": "icons/border-48.png"
+    "48": "icons/kfg.png"
   },
 
   "content_scripts": [
