--- a/csv-import/package.json
+++ b/csv-import/package.json
@@ -9,25 +9,33 @@
 	"author": "Joel Gustafson",
 	"license": "MIT",
 	"dependencies": {
+		"@types/got": "^9.6.11",
 		"@types/jsonld": "^1.5.1",
 		"@types/papaparse": "^5.2.2",
 		"@types/react": "^16.9.49",
 		"@types/react-dom": "^16.9.8",
+		"@types/request": "^2.48.5",
 		"apg": "git+https://github.com/underlay/apg.git",
 		"file-loader": "^6.1.0",
+		"html-metadata": "^1.7.1",
 		"jsonld": "^3.1.1",
+		"metascraper": "^5.14.12",
+		"net": "^1.0.2",
 		"papaparse": "^5.3.0",
 		"rdf-canonize": "^1.1.0",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
 		"react-router-dom": "^5.2.0",
+		"request": "^2.88.2",
 		"source-map-loader": "^1.1.0",
+		"tls": "0.0.1",
 		"ts-loader": "^8.0.3",
 		"typescript": "^4.0.2",
 		"webpack": "^4.44.1",
 		"webpack-cli": "^3.3.12"
 	},
 	"devDependencies": {
+		"@types/metascraper": "^5.14.0",
 		"@types/query-string": "^6.3.0",
 		"@types/react-router-dom": "^5.1.5"
 	}
